- CHANGED: Block Page datagen now supports blockstates