@@ -1,5 +1,5 @@
 [versions]
-    modopedia = "1.0.19"
+    modopedia = "1.0.20"
 
 # Common
     minecraft = "1.21.1"
